# toy-blockchain

./: Cargo.toml  README.md  crypto.slang  sha256.slang
shaders/: crypto.slang  crypto.spirv  sha256.slang
src/: bruteforce.rs  context.rs  main.rs  push_constants.rs  shader.rs  transaction.rs  util.rs  words.rs
